修复配置、脚本导出与文件操作问题